<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
android:orientation="vertical"
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:padding="20dp"
tools:context="com.example.a91599.appname.Activity.AddActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/bt_upload"
            android:layout_weight="0"
            android:background="@drawable/add_frame"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/add" />

        <TextView
            android:layout_marginLeft="30dp"
            android:layout_gravity="center"
            android:textSize="@dimen/small_size"
            android:textColor="@color/silver"
            android:text="@string/company_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>


    <EditText
        android:id="@+id/ed_title"
        android:layout_marginTop="20dp"
        android:hint="@string/title"
        android:padding="8dp"
        android:minHeight="0dp"
        android:maxLines="1"
        android:lines="1"
        android:inputType="text"
        android:textSize="@dimen/normal_size"
        android:background="@drawable/corner_edit_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />



    <EditText
        android:id="@+id/ed_summary"
        android:layout_marginTop="20dp"
        android:hint="@string/summary"
        android:inputType="text"
        android:padding="8dp"
        android:minHeight="0dp"
        android:textSize="@dimen/normal_size"
        android:background="@drawable/corner_edit_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


<EditText
    android:id="@+id/ed_link"
    android:layout_marginTop="20dp"
    android:hint="@string/link"
    android:inputType="text"
    android:padding="8dp"
    android:minHeight="0dp"
    android:textSize="@dimen/normal_size"
    android:background="@drawable/corner_edit_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />

    <Button
        android:layout_marginTop="20dp"
        android:textColor="#ffffff"
        android:background="@drawable/corner_btn"
        android:layout_gravity="center"
        android:id="@+id/bt_add"
        android:textSize="@dimen/normal_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add"/>


</LinearLayout>
