<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.a91599.appname.Activity.RegisterActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="30dp"
    android:layout_marginRight="30dp"
    android:orientation="vertical"
    android:gravity="center">

    <LinearLayout
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:gravity="center_vertical"
            android:textSize="@dimen/register_size"
            android:text="@string/phone_number"
            android:layout_width="60dp"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/ed_phone_num"
            android:background="@drawable/corner_edit_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:gravity="center_vertical"
            android:text="@string/password"
            android:textSize="@dimen/register_size"
            android:layout_width="60dp"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/ed_pass"
            android:background="@drawable/corner_edit_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:gravity="center_vertical"
            android:text="@string/password_again"
            android:textSize="@dimen/register_size"
            android:layout_width="60dp"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/ed_pass_again"
            android:background="@drawable/corner_edit_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_register"
        android:textColor="#ffffff"
        android:background="@color/blue_btn_bg_color"
        android:layout_marginTop="20dp"
        android:text="@string/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>
