<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:paddingLeft="30dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_marginBottom="10dp"
        android:layout_marginTop="60dp"
        android:drawablePadding="30dp"
        android:gravity="center_vertical"
        android:id="@+id/person_tv"
        android:drawableLeft="@drawable/head_appear"
        android:layout_width="match_parent"
        android:layout_height="100dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@drawable/black_dash_line"/>


    <TextView
        android:id="@+id/history"
        android:text="@string/history"
        android:layout_marginTop="10dp"
        android:textSize="@dimen/normal_size"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@drawable/black_dash_line"/>

    <TextView
        android:id="@+id/setting"
        android:textSize="@dimen/normal_size"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@drawable/black_dash_line"/>

    <TextView
        android:id="@+id/follow"
        android:text="@string/follow"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textSize="@dimen/normal_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@drawable/black_dash_line"/>
</LinearLayout>